--- a/pom.xml
+++ b/pom.xml
@@ -47,5 +47,13 @@
       <version>4.13.0</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
+    <dependency>
+      <groupId>org.seleniumhq.selenium</groupId>
+      <artifactId>selenium-java</artifactId>
+      <version>4.13.0</version>
+    </dependency>
+
+
   </dependencies>
 </project>
